# glox2

./: .gitignore  CMakeLists.txt  Todo.md  main.cpp
include/: ClassDef.cpp  ClassDef.h  Constant.h  Heap.h  Serialization.h  array_descriptor.h  bytecode.h  code.h  constants.h  dl_loader.h  dl_loader_factory.h  exec.h  function.h  g_object.h  g_object_factory.h  memory.h  obj_descriptor.h  opcode.h  stack.h
lib/: Constant.cpp  Heap.cpp  Serialization.cpp  array_descriptor.cpp  code.cpp  exec.cpp  g_object.cpp  g_object_factory.cpp  memory.cpp  obj_descriptor.cpp  stack.cpp  vm.cpp  vm.h
native/: gnative.h  io.cpp  io.h
native/nix/: dl_loader.h
serialization/: schema.fbs
